[package]
name = "recast-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1.6"
